--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/form-wizard.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/form-wizard.css
@@ -48,12 +48,12 @@
 .wizard-steps li .step {
   text-align: center;
   border: 2px solid #e5e8ed;
-  color: #d8dce6;
+  color: #fff;
   font-size: 19px;
   border-radius: 32px;
   line-height: 12px;
-  padding: 9px 15px;
-  background-color: #FFF;
+  padding: 12px 12px;
+  background-color: #D8D8D8;
   position: relative;
   z-index: 2;
   display: inline;
