Updated BDO form

--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
@@ -47,6 +47,12 @@
 	color: #D00000;
 }
 
+.bdo-form .success-msg {
+	font-size: medium;
+	font-style: italic;
+	color: #339900;
+}
+
 .button-wrapper {
 	padding-top: 15px;
 }
