--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/bootstrap.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/bootstrap.css
@@ -3471,7 +3471,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eee;
 }
 .nav > li.disabled > a {
   color: #999;
@@ -3510,6 +3509,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   line-height: 1.428571429;
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
+  opacity: 0.7;
 }
 .nav-tabs > li > a:hover {
   border-color: #eee #eee #ddd;
@@ -3517,9 +3517,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
-  color: #555;
+  opacity: 1;
   cursor: default;
-  background-color: #fff;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
 }
