--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
@@ -70,3 +70,13 @@
 	line-height: 24px;
 	text-align: left;
 }
+
+.numbering-blue {
+	font-weight: bold;
+	color: #002a80;
+}
+
+.numbering-green {
+	font-weight: bold;
+	color: #51a351;
+}
