--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/dataTables.bootstrap.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/dataTables.bootstrap.css
@@ -45,6 +45,7 @@ table.dataTable {
 	margin-top: 6px !important;
 	margin-bottom: 6px !important;
 	max-width: none !important;
+	font-size: 14px;
 }
 
 table.dataTable thead .sorting,
