--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/jquery.fancybox.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/jquery.fancybox.css
@@ -26,12 +26,12 @@
 
 .fancybox-skin {
 	position: relative;
-	background: #f9f9f9;
+	background: #D8D8D8;
 	color: #444;
 	text-shadow: none;
-	-webkit-border-radius: 4px;
-	   -moz-border-radius: 4px;
-	        border-radius: 4px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	 border-radius: 10px;
 }
 
 .fancybox-opened {
