--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/styles.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/styles.css
@@ -1,6 +1,24 @@
+/* FONT - ADOBE CLEAN*/
+
+@font-face {
+ font-family: "AdobeClean";
+ src: url(../fonts/adobeclean-regular-webfont.eot);
+ src: url(../fonts/adobeclean-regular-webfont.eot?#iefix)
+  format("embedded-opentype"),
+  url(../fonts/adobeclean-regular-webfont.woff)
+  format("woff"),
+  url(../fonts/adobeclean-regular-webfont.ttf)
+  format("truetype"),
+  url(../fonts/adobeclean-regular-webfont.svg#AdobeClean)
+  format("svg");
+ font-weight: normal;
+ font-style: normal;
+}
+
 body{
     font-size:12px;
     background-color: #ccc;
+	font-family: 'AdobeClean'
    
 }
 
@@ -96,7 +114,7 @@ body{
 
 #main-sidebar .user-profile{
     padding-left: 40px;
-    height:50px;
+    height: 68px;
 }
 
 #main-content {
@@ -107,7 +125,7 @@ body{
 }
 
 .tab-pane {
-    min-height:680px;
+    min-height:400px;
 }
 
 .panel-default > .panel-heading{
@@ -135,7 +153,7 @@ body{
 }
 
 .panel {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     background-color: #fff;
     border: 0px solid transparent;
     border-radius: 6px;
