--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.reports.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.reports.css
@@ -2,15 +2,16 @@
 	position: relative;
 }
 
+.dataTable {
+	width: 100% !Important;
+}
+
 .dataTables_filter input {
 	border-radius: 5px;
 	height: 28px;
 	background: url("../images/search.png") top right no-repeat;
 }
 
-.bdo-direct-reports {
-	width: 75%;
-}
 
 .quarterly-bdo-direct-reports .panel-default {
 	margin-bottom: 0px;
@@ -18,6 +19,7 @@
 
 .tab-content .bdo-direct-reports {
 	padding-left: 0px;
+    padding-right: 0px;
 }
 
 .tab-content .dataTables_wrapper {
@@ -40,4 +42,8 @@ div.dataTables_paginate.pagination ul li a {
 
 .pagination [class^="icon-"], .pagination [class*=" icon-"] {
 	line-height: 25px;
+}
+
+.center-aligned {
+text-align: center;
 }
