Objective-Achievement mapping implemented.

--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
@@ -21,8 +21,10 @@
 }
 
 .bdo-form textarea {
-	height: 60px;
-	resize: none;
+	height: 85px;
+ resize: none;
+ width:  48%;
+ display: inline;
 }
 
 .bdo-form .objective-desc {
