--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/styles.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/styles.css
@@ -1,9 +1,9 @@
 /* FONT - ADOBE CLEAN*/
 
 @font-face {
- font-family: "AdobeClean";
- src: url(../fonts/adobeclean-regular-webfont.eot);
- src: url(../fonts/adobeclean-regular-webfont.eot?#iefix)
+font-family: "AdobeClean";
+src: url(../fonts/adobeclean-regular-webfont.eot);
+src: url(../fonts/adobeclean-regular-webfont.eot?#iefix)
   format("embedded-opentype"),
   url(../fonts/adobeclean-regular-webfont.woff)
   format("woff"),
@@ -11,15 +11,16 @@
   format("truetype"),
   url(../fonts/adobeclean-regular-webfont.svg#AdobeClean)
   format("svg");
- font-weight: normal;
- font-style: normal;
+font-weight: normal;
+font-style: normal;
 }
 
 body{
     font-size:12px;
     background-color: #ccc;
-	   font-family: 'AdobeClean';
-	   background: url(../images/bg-watermark.jpg);
+    font-family: 'AdobeClean';
+    /*background: url(../images/bg-watermark.jpg);*/
+               background: #fff;
     background-size: 40%;
    
 }
@@ -61,7 +62,7 @@ body{
 }
 
 #main-sidebar{
-    width:250px;
+    width:350px;
 }
 
 #main-sidebar .user-profile{
@@ -70,7 +71,7 @@ body{
 }
 
 #main-content {
-    margin: 0 0 0 250px;
+    margin: 0 0 0 350px;
     padding: 0;
     color: #454545;
    
@@ -154,4 +155,31 @@ body{
 }
 
 .wizard-steps li.active .step{
+}
+
+.glyphicon-signal, .glyphicon-list {
+               padding-right: 10px;
+}
+
+.title-name {
+               font-size: 18px;
+    color: #222;
+    border-bottom: solid 1px #ccc;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.title-name span {
+               font-size: 16px;
+    color: #666;
+}
+.user-profile h3 span {
+               font-size: 22px;
+}
+.profile-logout a {
+               font-size: 15px;
+}
+
+textarea {
+	font-family: AdobeClean;
 }
