Adding contact-us link

--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-internal/css/gdc.bdo.css
@@ -172,3 +172,12 @@ height: 25px;
  .btn-edit {
               width: 70px;
 }
+
+.contact-us {
+													font-size: 16px;
+													color: #fff;
+}
+
+a.contact-us:hover {
+             color: #fff;
+}
