--- a/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/styles.css
+++ b/content/src/main/content/jcr_root/etc/designs/gdc-checkin/clientlibs-external/css/styles.css
@@ -160,11 +160,20 @@ body{
 }
 
 .title-name {
-               font-size: 18px;
+    font-size: 18px;
+    float: left;
+				margin-top: 63px;
+				margin-left: 10px;
     color: #222;
-    border-bottom: solid 1px #ccc;
-    margin-bottom: 20px;
     padding-bottom: 10px;
+}
+
+.profile-container img {
+	  float: left;
+}
+
+.profile-container {
+			border-bottom: 1px solid #ccc;
 }
 
 .title-name span {
